--- a/packages/react-showroom/package.json
+++ b/packages/react-showroom/package.json
@@ -63,6 +63,7 @@
     "hast-util-to-html": "7.1.3",
     "html-webpack-plugin": "^5.5.3",
     "html-webpack-tags-plugin": "^3.0.2",
+    "inject-manifest-plugin": "^0.3.4",
     "lodash": "^4.17.21",
     "lz-string": "^1.4.4",
     "match-sorter": "^6.3.1",
